fix: wrap unauthorized access message in a div for better styling and structure

--- a/website/src/pages/ReservedArea/index.less
+++ b/website/src/pages/ReservedArea/index.less
@@ -3,7 +3,20 @@
   margin: 0 auto;
 
   >div.loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 50vh;
+  }
+
+  &__unauthorized {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    min-height: 50vh;
+    padding: 40px 20px;
   }
 
   @media screen and (max-width: 576px) {
